# mysql-mcp-server

./: .gitignore  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml
server/: main.py
server/db/: mysql_client.py
