[project]
name = "mysql-mcp-server"
version = "0.1.0"
description = "MySQL MCP Server implementation with FastMCP"
authors = [
    {name = "Your Name",email = "your.email@example.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "fastmcp (>=2.0.0,<3.0.0)",
    "mysql-connector-python (>=8.0.33,<9.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
start = "server.main:main"
