[project]
name = "mysql-mcp-server"
version = "0.1.0"
description = "MySQL MCP Server implementation with FastMCP"
authors = [
    {name = "Your Name",email = "sample@sample.com"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "fastmcp (>=2.0.0,<3.0.0)",
    "mysql-connector-python (>=8.0.33,<9.0.0)",
    "python-dotenv (>=1.0.0,<2.0.0)"
]

[tool.poetry]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
start = "server.main:main"
